--- a/booking.html
+++ b/booking.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <title>Booking-Success</title>
     <link rel="stylesheet" href="assets/booking.css">
     <link rel="stylesheet" href="assets/mobile-nav.css">
@@ -12,8 +13,17 @@
     <header class="head-navigation-bar">
         <div class="head-navigations">
             <div class="mob-menu">
-                <div class="menu-bar">
-                    <a href="" class="menu-link"><img src="assets/mobile/menu.png" alt="" class="menu-img"></a>
+                <input type="checkbox" id="check">
+                <label for="check" class="checkbttn">
+                    <i class="fa fa-bars fa-2x"></i>
+                </label>
+                <div class="mobile-navigations">
+                    <div class="mob-nav"><a href="index.html" class="mob-nav-link">Home</a></div>
+                    <div class="mob-nav"><a href="doodling.html" class="mob-nav-link">Doodling</a></div>
+                    <div class="mob-nav"><a href="event-details.html" class="mob-nav-link">Book-Seat</a></div>
+                    <div class="mob-nav"><a href="teachers-list.html" class="mob-nav-link">Teachers-List</a></div>
+                    <div class="mob-nav"><a href="teacher-details.html" class="mob-nav-link">Teachers-Details</a></div>
+                    <div class="mob-nav"><a href="home.html" class="mob-nav-link">Teachers-Home</a></div>
                 </div>
                 <div class="mob-nav-logo">
                     <a href="index.html" class="mob-logo-link"><img src="assets/mobile/logo.png" alt="" class="mob-nav-img"></a>
